# $Id$

2007-07-07	Konstantin V. Arkhipov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: resolveViewName now
	throws WrongArgumentException; class is now final.

2007-07-06	Dmitry E. Pismenny

	* main/Flow/RedirectView.class.php: special handling for boolean
	values.

2007-07-06	Vladimir A. Altuchov

	* main/Base/TimestampRange.class.php: overloaded getStartStamp() and
	getEndStamp() for correct compare Timestamp object.

2007-07-05	Anton E. Lebedevich

	* main/Utils/TidyValidator.class.php: validationErrors renamed to
	messages, added getErrorCount() and getWarningCount().

2007-07-04	Anton E. Lebedevich

	* core/Logic/PostfixUnaryExpression.class.php: renamed from
	UnaryExpression.

	* core/Logic/PrefixUnaryExpression.class.php: implemented unary '-' and
	unary logical 'not'.

2007-07-04	Konstantin V. Arkhipov

	* core/Form/Filters/BaseFilter.class.php: now implements
	Instantiatable too.

2007-07-03	Konstantin V. Arkhipov

	* core/Base/Timestamp.class.php: toISOString() renamed to
	toIsoString().

2007-07-03	Anton E. Lebedevich

	* core/OSQL/QueryCombination.class.php: added orderBy, limit, offset.

	* core/OSQL/SelectQuery.class.php, core/OSQL/OrderChain.class.php: type
	determination logic moved from SelectQuery to OrderChain.

2007-07-01	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveIdentifier.class.php: added ability
	get object not only by getById method.

	* main/Utils/ClassUtils.class.php: callStaticMethod, checkStaticMethod
	methods added.

2007-07-01	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: identity map isolated from mere
	mortals.

	* core/Logic/EqualsLowerExpression.class.php: now optimizes out
	lower() call for given strings.

	* core/Form/Filters/NewLinesToBreaks.class.php,
	core/Form/Filters/UnixToUnixDecode.class.php,
	core/Form/Filters/UnixToUnixEncode.class.php: introduced.

	* core/Form/Filters/TrimFilter.class.php: direction support added.

2007-06-30	Sergey M. Skachkov
